5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1831_3179.log
== TEST (2019-06-13 16:20:27) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(1, dtype=int)
for i in range(size(a)!=1):
	b=b+a[i]
print(b)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:21:47) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
for i in range(size(a)!=1):
	b=b+a[i]
print(b)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:22:37) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
for i in range(size(a)!=1):
	b=
print(b)	
	
	
-- ERROR:
File "XXXX", line 5
    b=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:23:03) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(a, dtype=int)
for i in range(size(a)!=1):
	b[0]=b[0]+1
print(b)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:17) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(size(a), dtype=int)
for i in range(size(a)!=1):
	b[0]=b[0]+1
print(b)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:39) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(size(a), dtype=int)
for i in range(size(a)):
	b[0]=b[0]+1
print(b)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:26:39) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(size(a), dtype=int)
for i in range(size(a)):
	b[0]=b[0]+1
print(b)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:20) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(size(a), dtype=int)
for i in range(size(a)!=1):
	b[0]=b[0]+1
print(b)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:33:16) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(size(a), dtype=int)
c=size(a)
for i in range(size(a)!=1):
	b[i]=a[d]
	c=c-1
print(b)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:33:59) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(size(a), dtype=int)
c=size(a)
for i in range(size(a)!=1):
	b[i]=a[c]
print(b)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:46:38) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(size(a), dtype=int)
c=size(a)
for i in range(size(a)!=1):
	b[c]=a[i]
	b=b-1
print(b)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:48:26) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(size(a), dtype=int)
c=size(a)
for i in range(size(a)!=1):
	b[c]=a[i]-1
print(b)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:50:11) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(size(a), dtype=int)
c=size(a)
for i in range(size(a)!=1):
	b[i]=a[c-1]
	c=c-1
print(c)	
	
	
-- EXECUTION TIME:
0.747466
-- TEST CASE 1:
---- input:
[2,3,4,1,1,1,-1]
---- correct output:
[ 2  3  4 -1  1  1  1]
---- user output:
6
-- TEST CASE 2:
---- input:
[1,1,1,5,4,3,2]
---- correct output:
[5 4 3 2 1 1 1]
---- user output:
6
-- TEST CASE 3:
---- input:
[1,0,1,2,0,1,4,1,5]
---- correct output:
[0 2 0 4 5 1 1 1 1]
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:14) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(size(a), dtype=int)
c=size(a)
for i in range(size(a)!=1):
	b[i]=a[c-1]
	c=c-1
print(c)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:51:05) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(size(a), dtype=int)
c=size(a)
for i in range(size(a)):
	if
	b[i]=a[c-1]
	c=c-1
print(b)	
	
	
-- ERROR:
File "XXXX", line 6
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:51:12) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(size(a), dtype=int)
c=size(a)
for i in range(size(a)):
	b[i]=a[c-1]
	c=c-1
print(b)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:51:24) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(size(a), dtype=int)
c=size(a)
for i in range(size(a)!=1):
	b[i]=a[c-1]
	c=c-1
print(b)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:51:36) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(size(a), dtype=int)
c=size(a)
for i in range(size(a)==1):
	b[i]=a[c-1]
	c=c-1
print(b)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:52:47) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(size(a), dtype=int)
c=size(a)
for i in range(size(a)):
	b[i]=a[c-1]
	c=c-1
print(b)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:54:19) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(size(a), dtype=int)
c=size(a)
for i in range(size(a)):
	b[i]=a[c-1]
	c=c-1
print(c)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:54:45) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(size(a), dtype=int)
c=size(a)
for i in range(size(a)):
	b[i]=a[c-1]
	c=c-1
print(b)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 21:43:06) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=zeros(size(a), dtype=int)
c=size(a)
for i in range(size(a)):
	b[i]=a[c-1]
	c=c-1
print(b)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
